[IFC] Small attempt to fix overlapping

--- a/showdown/poke.css
+++ b/showdown/poke.css
@@ -35,7 +35,7 @@ h4 {
     top:0;
     right:0;
     margin:0;
-    margin-top:4%;
+    margin-top:3em;
 }
 
 nav {
